@@ -1,5 +1,11 @@
 2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-typify.c (pkl_typify1_ps_try_until_stmt): Fix
+	diagnostics.
+	* testsuite/poke.pkl/try-until-diag-1.pk: Update expected error.
+
+2022-01-20  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-typify.c (pkl_typify1_ps_print_stmt): Fix
 	diagnostics.
 	* testsuite/poke.pkl/print-diag-1.pk: Update expected error.
